# demo

demo/: Assembly-CSharp.csproj
demo/Assets/Resources/fbx/: fc.FBX
demo/Assets/Resources/fbx/texture/: PL_Waiting01.tga  PL_Waiting02.tga  PL_Waiting03.tga  PL_floor_05.tga
demo/Assets/Resources/fbx/texture/Materials/: BI_SpaceOBJ_D.mat  FXS_SpcecStartRoom_Tex_01.mat  PL_Waiting01.mat  PL_Waiting02.mat  PL_Waiting03.mat  PL_floor_05.mat  boy_001.mat
demo/Assets/Resources/prefab/: fc.prefab
demo/Assets/Scenes/: SampleScene.unity
demo/Assets/Scenes/SampleScene/: NavMesh.asset
demo/Assets/Scripts/: tester.cs
demo/ProjectSettings/: NavMeshAreas.asset  ProjectSettings.asset
document/: AutoConfiger.cs  拆迁大队.xmind
document/config/: car.xls  enums.xls  language.xls  map.xls  mission.xls  reward.xls  role.xlsx  structs.xls
document/config/xmlconfig/: car.xml  language.xml  map.xml  mission.xml  reward.xml
server/cppserver/: CMakeLists.txt
server/cppserver/api/: api.h
server/cppserver/logic/: CMakeLists.txt
server/cppserver/logic/interface/: iDemo.h  iNavigation.h  iSynchronization.h  iTdb.h
server/cppserver/logic/module/CSharpNetTest/: CSharpNetTest.cpp  CSharpNetTest.h
server/cppserver/logic/module/demo/: CMakeLists.txt  connecter.cpp  connecter.h  connecterManager.cpp  connecterManager.h  demo.cpp  demo.h  header.h  main.cpp  scene.h  sceneManager.cpp  sceneManager.h  uuidManager.cpp  uuidManager.h
server/cppserver/logic/module/navigation/: DetourNavMesh.cpp  DetourNavMesh.h  DetourTileCache.cpp  DetourTileCacheBuilder.cpp  RecastContour.cpp  navigation.cpp  navigation.h  navmesh.cpp  navmesh.h
server/cppserver/logic/module/synchronization/: CMakeLists.txt  clientSession.cpp  clientSession.h  header.h  main.cpp  synchronization.cpp  synchronization.h
server/cppserver/logic/module/tdb/: CMakeLists.txt  header.h  main.cpp  mysqlcppconn8.exp  tdb.cpp  tdb.h
server/cppserver/public/: cargs.h  cfile.h  cthread.cpp  cthread.h  multisys.h  spinlock.h  tools-win.cpp  tools.h  tpool.h  tqcsort.h  tqueue.h  uuid.h
server/cppserver/tcore3/: core.cpp  core.h  instance.h
server/cppserver/tcore3/httper/: httpData.h  httpRequest.cpp  httpRequest.h  httper.cpp  httper.h
server/cppserver/tcore3/logger/: logfile.cpp  logfile.h  logger.cpp  logger.h
server/cppserver/tcore3/logic/: logic.cpp  logic.h
server/cppserver/tcore3/net/win/: header.h  interface.h  iocper.cpp  iocper.h
server/cppserver/tcore3/net/win/tcp/: accepter.cpp  accepter.h  tcper.cpp  tcper.h
server/cppserver/tcore3/net/win/udp/: udper.cpp  udper.h
server/cppserver/tcore3/redis/: redis.cpp  redis.h  redisTransaction.cpp  redisTransaction.h  rediser.cpp  rediser.h
server/cppserver/tcore3/sharememory/: shareMemory.cpp
server/cppserver/tcore3/timer/: tbase.cpp  tbase.h  tgear.cpp  tgear.h  timermgr.cpp  timermgr.h
server/cppserver/tools/: CMakeLists.txt
server/cppserver/tools/config_maker/: CMakeLists.txt  configer.h  header.h  jsonmaker.cpp  jsonmaker.h  main.cpp  tenums.h  tstructs.h  xmlmaker.cpp  xmlmaker.h
server/cppserver/tools/config_maker/csharp/: csharpmaker.cpp  csharpmaker.h
server/cppserver/tools/config_maker/ts/: tsmaker.cpp  tsmaker.h
server/cppserver/tools/file_compare/: CMakeLists.txt  main.cpp
server/cppserver/tools/model_maker/: header.h  main.cpp
